--- a/src/course.css
+++ b/src/course.css
@@ -17,5 +17,9 @@
     margin: 1px;
 }
 .course .headding {
-    font-size: 1.5em;
+    font-size: 1.1em;
+}
+
+.course div > span {
+    padding-left: 10px;
 }
